# slack-automations

./: README.md  app.py  main.py  pyproject.toml  requirements.txt  vercel.json
crew/: crew.py  models.py
crew/config/: agents.yaml  tasks.yaml
llm/: utils.py
routers/: slack.py
slack/: utils.py  workflows.py
