[project]
name = "slack-automations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crewai[tools]>=0.121.1",
    "duckduckgo-search>=8.0.2",
    "fastapi>=0.115.12",
    "google-generativeai>=0.8.5",
    "httpx>=0.28.1",
    "langchain-community>=0.3.24",
    "langchain-google-genai>=2.0.10",
    "pydantic>=2.11.5",
    "python-multipart>=0.0.20",
    "slack-bolt>=1.23.0",
    "uvicorn[standard]>=0.34.2",
]
