[project]
name = "slack-automations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "langchain-google-genai>=2.1.5",
    "pydantic>=2.11.5",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.34.3",
]
